# hackathon-II-Phase-4

./: docker-compose.yml
.claude/: settings.local.json
.claude/agents/: ai-agent-sdk-integrator.md  backend-agent.md  chatbot-orchestrator.md  database-extender.md  frontend-chatkit-integrator.md  mcp-server-developer.md  natural-language-behavior-handler.md  tester-chatbot-auditor.md
.claude/skills/: ChatKit_Frontend_Integration.md  Database_Extension_for_Chatbot.md  MCP-tool-implementation.md  Natural_Language_Behavior_Handling.md  Stateless_Conversation_Persistence.md  Testing_&_Validation_for_Chatbot.md  User_Info_&_Personalization_Handling.md  openai-agents-sdk-integration.md  task_crud_skill.md  task_filter_skill.md  task_state_management_skill.md  task_storage_skill.md  todo_advanced_skill.md  todo_cli_ui_skill.md  todo_i18n_skill.md  (+1 more)
backend/: Dockerfile  README.md  alembic.ini  config.py  database.py  db_init.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_conversation_message_models.py
backend/api/endpoints/: chat.py
backend/models/: conversation.py  message.py
backend/schemas/: user.py
backend/services/: cohere_service.py  user_service.py
backend/src/api/: tasks.py
backend/src/database/: session.py
backend/src/middleware/: jwt_middleware.py
backend/src/services/: user_service.py
backend/tests/: test_chat_processing.py  test_user_isolation.py
frontend/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
k8s/: secrets.yaml
(+57 files in other folders)
